// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`facebookVideo should return unsuccess result if pass wrong string 1`] = `
Object {
  "success": false,
}
`;

exports[`facebookVideo should return valid result if pass new iframe html code 1`] = `
Object {
  "shortHeight": false,
  "success": true,
  "type": "iframe",
  "url": "https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Ffacebook%2Fvideos%2F10155479830046729",
}
`;

exports[`facebookVideo should return valid result if pass old iframe html code 1`] = `
Object {
  "shortHeight": false,
  "success": true,
  "type": "iframe",
  "url": "https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Ffacebook%2Fvideos%2F10204840935178043",
}
`;
